add sticky image

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.8.1",
     "react-scroll": "^1.9.0",
+    "react-scroll-snap": "^1.0.0",
     "react-typed": "^2.0.12"
   },
   "devDependencies": {
